--- a/server/package.json
+++ b/server/package.json
@@ -53,7 +53,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.18.2",
     "express-handlebars": "^5.2.0",
+    "got": "^13.0.0",
     "knex": "^2.5.1",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "objection": "^3.1.1",
     "objection-unique": "^1.2.2",
