--- a/server/.env.example
+++ b/server/.env.example
@@ -1,1 +1,9 @@
 SESSION_SECRET=""
+
+USER_NAME=""
+PASSWORD=""
+CONSOLE_SIGN_IN_URL=""
+
+AWS_ACCESS_KEY=""
+AWS_SECRET_KEY=""
+S3_BUCKET_DEVELOPMENT=""
