--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "react-dom": "~16.13",
     "react-hot-loader": "^4.12.21",
     "react-router-dom": "5.2",
+    "recharts": "^2.7.3",
     "redbox-react": "~1.6",
     "sass-loader": "^6.0.7",
     "style-loader": "^1.2.1",
